# org.gnome.desktop-icons-reworked

./: .gitignore  .jshintrc  CMakeLists.txt  CMakeLists.txt.prova  Makefile  PKGBUILD  README.md  extension.js  metadata.json  prefs.js  readme.txt  settings.ui
org.gnome.desktop-icons-reworked/: extension.js  metadata.json
schemas/: org.gnome.shell.extensions.desktop-icons.gschema.xml
